k8s/talos-k8s/unifi-dynamic-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-dynamic-dns
  namespace: default
  labels:
    app: unifi-dynamic-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-dynamic-dns
  template:
    metadata:
      labels:
        app: unifi-dynamic-dns
    spec:
      containers:
      - name: unifi-dynamic-dns
        image: ghcr.io/sudomateo/unifi-dynamic-dns:latest
        ports:
          - containerPort: 8443
            name: https
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-dynamic-dns
  namespace: default
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.30.69
spec:
  type: LoadBalancer
  selector:
    app: unifi-dynamic-dns
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
