k8s/talos-k8s/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: default
  labels:
    name: website
spec:
  replicas: 2
  selector:
    matchLabels:
      name: website
  template:
    metadata:
      labels:
        name: website
    spec:
      containers:
      - name: website
        image: ghcr.io/sudomateo/website:main-a105d619-1777758828 # {"$imagepolicy": "flux-system:website"}
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
spec:
  selector:
    name: website
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
