k8s/talos-k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: external
  rules:
  - host: matthewsanabria.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 8080
  # TODO: Combine @ and www hosts into one configuration, if possible.
  - host: www.matthewsanabria.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 8080
  - host: yeetcode.matthewsanabria.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yeetcode
            port:
              number: 3000
  tls:
  - hosts:
    - matthewsanabria.com
    - www.matthewsanabria.com
    secretName: matthewsanabria-com-crt
  - hosts:
    - yeetcode.matthewsanabria.com
    secretName: yeetcode-matthewsanabria-com-crt
